# OminiX-MLX

./: Cargo.toml  README.md
docs/: mlx-rs-core-refactor-complete.md  performance-comparison.md
flux-klein-mlx/: Cargo.toml
funasr-mlx/: Cargo.toml
funasr-mlx/examples/: compare_cif_batch.rs  compare_stft.rs  overall_performance.rs  validate_correctness.rs
funasr-mlx/src/: audio.rs  lib.rs  punctuation.rs
funasr-nano-mlx/: BENCHMARK_RESULTS.md  Cargo.toml  README.md
funasr-nano-mlx/docs/: CODE_REVIEW.md  DEV_PLAN.md  PERFORMANCE_ENHANCEMENT_PLAN.md  architecture.md  dev-plan.md  fun-asr-compatibility-analysis.md  llm-projects-review-and-fun-asr-integration.md
funasr-nano-mlx/examples/: benchmark.rs  check_llm_embeddings.rs  check_params.rs  check_weight_values.rs  compare_adaptor.rs  debug_encoder_layers.rs  debug_first_layer.rs  debug_generation.rs  debug_pipeline.rs  debug_transcribe.rs  debug_weights.rs  fair_benchmark.rs  load_model.rs  profile_test.rs  trace_forward.rs  transcribe.rs  transcribe_memo.rs  verify_weights.rs
funasr-nano-mlx/scripts/: convert_weights.py
funasr-nano-mlx/src/: adaptor.rs  audio.rs  error.rs  lib.rs  model.rs  qwen.rs  sensevoice_encoder.rs  whisper_encoder.rs
glm-4.7-flash-mlx/: Cargo.toml  README.md
glm-4.7-flash-mlx/examples/: generate_glm4_flash.rs  tool_use.py
glm-4.7-flash-mlx/src/: lib.rs  model.rs
glm4-mlx/: Cargo.toml  README.md
glm4-mlx/examples/: generate_glm4.rs
glm4-mlx/src/: lib.rs  model.rs
glm4-moe-mlx/: Cargo.toml  README.md
glm4-moe-mlx/examples/: generate_glm4_moe.rs
glm4-moe-mlx/src/: model.rs
gpt-sovits-mlx/: Cargo.toml
gpt-sovits-mlx/docs/: PERFORMANCE_ANALYSIS.md  vits-training-plan.md
gpt-sovits-mlx/examples/: train_vits.rs  voice_clone.rs
gpt-sovits-mlx/python/: engine.py
gpt-sovits-mlx/rust/: Cargo.toml  README.md
gpt-sovits-mlx/rust/examples/: debug_yinhang.rs
gpt-sovits-mlx/rust/src/: audio.rs
gpt-sovits-mlx/scripts/: convert_roberta_coreml.py  dump_full_pipeline.py
gpt-sovits-mlx/src/: inference.rs  voice_clone.rs
gpt-sovits-mlx/src/text/: cn2an.rs  g2pw.rs  jieba_seg.rs  lang_segment.rs  preprocessor.rs  text_normalizer.rs  tone_sandhi.rs
gpt-sovits-mlx/src/training/: vits_trainer.rs
mistral-mlx/: Cargo.toml  README.md
mistral-mlx/src/: lib.rs
mixtral-mlx/: Cargo.toml  README.md
mixtral-mlx/examples/: generate_mixtral.rs
mixtral-mlx/src/: lib.rs  model.rs
mlx-rs-core/: Cargo.toml  README.md
mlx-rs-core/src/: audio.rs  cache.rs  error.rs  lib.rs  metal_kernels.rs  speculative.rs  utils.rs
mlx-rs-core/src/generate/: generate_token.rs  mod.rs
mlx-rs/mlx-sys/: build.rs
qwen-image-mlx/: Cargo.toml
qwen-image-mlx/docs/: MIXED_PRECISION_OPTIMIZATION.md
qwen-image-mlx/examples/: generate_qwen_image.rs
qwen-image-mlx/src/: qwen_full_precision.rs  qwen_quantized.rs
qwen3-mlx/: Cargo.toml  README.md
qwen3-mlx/examples/: chat_qwen3.rs  generate_qwen3.rs
qwen3-mlx/src/: lib.rs  model.rs  qwen2.rs  qwen3_moe.rs
step-audio2-mlx/: Cargo.toml  real_speech.aiff
step-audio2-mlx/docs/: PERFORMANCE_OPTIMIZATION.md  fix-dev-plan.md
step-audio2-mlx/examples/: asr.rs  benchmark_audio_processing.rs  benchmark_e2e.rs  speech_to_speech.rs  test_s3tokenizer.rs  test_tts_pipeline.rs
step-audio2-mlx/scripts/: convert_s3tokenizer.py  convert_tts_weights.py
step-audio2-mlx/src/: audio.rs  config.rs  llm.rs  model.rs  pipeline.rs
step-audio2-mlx/src/tts/: flow.rs  hifigan.rs  mod.rs  s3tokenizer_mlx.rs
zimage-mlx/: Cargo.toml
