[workspace.package]
# All but mlx-sys should follow the same version. mlx-sys should follow
# the version of mlx-c.
version = "0.25.2"
edition = "2021"
authors = [
    "Minghua Wu <michael.wu1107@gmail.com>",
    "David Chavez <david@dcvz.io>",
]

repository = "https://github.com/oxideai/mlx-rs"
keywords = ["mlx", "deep-learning", "machine-learning"]
categories = ["science"]
license = "MIT OR Apache-2.0"
documentation = "https://oxideai.github.io/mlx-rs/mlx_rs/"
rust-version = "1.82.0"

[workspace]
members = [
    # Original mlx-rs components
    "mlx-rs",
    "mlx-rs/mlx-sys",
    "mlx-rs/mlx-macros",
    "mlx-rs/mlx-internal-macros",
    "mlx-rs/mlx-lm-utils",
    "mlx-rs/mlx-tests",
    # OminiX shared utilities
    "mlx-rs-core",
    # OminiX model crates
    "flux-klein-mlx",
    "zimage-mlx",
    "funasr-mlx",
    "funasr-nano-mlx",
    "qwen3-mlx",
    "glm4-mlx",
    "glm4-moe-mlx",
    "mixtral-mlx",
    "mistral-mlx",
    "qwen-image-mlx",
    "gpt-sovits-mlx",
    "step-audio2-mlx",
]

resolver = "2"

[workspace.dependencies]
# workspace local dependencies
mlx-sys = { version = "=0.2.0", path = "mlx-rs/mlx-sys" }
mlx-macros = { version = "0.25", path = "mlx-rs/mlx-macros" }
mlx-internal-macros = { version = "0.25", path = "mlx-rs/mlx-internal-macros" }
mlx-rs = { version = "0.25", path = "mlx-rs" }
mlx-lm-utils = { version = "0.0.1", path = "mlx-rs/mlx-lm-utils" }
mlx-rs-core = { version = "0.1.0", path = "mlx-rs-core" }

# external dependencies
thiserror = "2"
float_eq = "1"
pretty_assertions = "1.4.0"
dyn-clone = "1"
half = "2"
mach-sys = "0.5"
num-complex = "0.4"
num_enum = "0.7"
num-traits = "0.2"
paste = "1"
smallvec = "1"
strum = { version = "0.27", features = ["derive"] }
libc = "0.2"
parking_lot = "0.12"
tempfile = "3"
itertools = "0.14"
syn = { version = "2", features = ["full"] }
quote = "1"
darling = "0.21"
proc-macro2 = "1"
bindgen = "0.72"
cmake = "0.1"
cc = "1"
safetensors = "0.6"
bytemuck = "1"
memmap2 = "0.9"
