[package]
name = "funasr-mlx"
version = "0.1.0"
edition = "2021"
description = "FunASR Paraformer speech recognition on Apple Silicon using MLX"
license = "MIT OR Apache-2.0"
keywords = ["asr", "speech-recognition", "mlx", "apple-silicon", "paraformer"]
categories = ["science::ml", "multimedia::audio"]

[dependencies]
# MLX core - using path dependency for development
mlx-rs = { path = "../mlx-rs", features = ["metal", "accelerate"] }

# Shared infrastructure
mlx-rs-core = { path = "../mlx-rs-core" }

# Error handling
thiserror = "2"

# FFT for efficient STFT computation (replaces O(N²) manual DFT)
rustfft = "6.2"

# ONNX Runtime for CT-Transformer punctuation model
ort = { version = "2.0.0-rc.11", optional = true }
serde_json = { version = "1", optional = true }

[features]
default = []
punctuation = ["ort", "serde_json"]

[dev-dependencies]
# For examples only

[[example]]
name = "transcribe"
path = "examples/transcribe.rs"

[[example]]
name = "benchmark"
path = "examples/benchmark.rs"

[[example]]
name = "compare_stft"
path = "examples/compare_stft.rs"

[[example]]
name = "compare_cif_batch"
path = "examples/compare_cif_batch.rs"

[[example]]
name = "validate_correctness"
path = "examples/validate_correctness.rs"

[[example]]
name = "overall_performance"
path = "examples/overall_performance.rs"
