[package]
name = "mixtral-mlx"
version = "0.1.0"
edition = "2021"
description = "Mixtral MoE LLM inference on Apple Silicon with MLX"
license = "MIT OR Apache-2.0"

[dependencies]
mlx-rs = { path = "../mlx-rs", features = ["metal", "accelerate"] }
mlx-sys = { path = "../mlx-rs/mlx-sys" }
mlx-rs-core = { path = "../mlx-rs-core" }
thiserror = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokenizers = "0.21"

[[example]]
name = "generate_mixtral"
path = "examples/generate_mixtral.rs"
