[package]
name = "qwen-image-mlx"
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Qwen-Image-2512 implementation in Rust using MLX"

[dependencies]
mlx-rs = { path = "../mlx-rs", features = ["safetensors"] }
mlx-macros = { path = "../mlx-rs/mlx-macros" }
thiserror.workspace = true
safetensors.workspace = true
bytemuck.workspace = true
memmap2.workspace = true
serde_json = "1"
tokenizers = "0.21"

[dev-dependencies]
pretty_assertions.workspace = true
clap = { version = "4", features = ["derive"] }
dirs = "5"

[[example]]
name = "generate_qwen_image"
path = "examples/generate_qwen_image.rs"
[[bin]]
name = "test_index"
path = "/tmp/test_index.rs"
[[bin]]
name = "test_index2"
path = "/tmp/test_index2.rs"
[[bin]]
name = "test_contiguous"
path = "/tmp/test_contiguous_example.rs"
