[package]
name = "qwen3-mlx"
version = "0.1.0"
edition = "2021"
description = "Qwen3 LLM inference on Apple Silicon with MLX"
license = "MIT OR Apache-2.0"

[dependencies]
mlx-rs = { path = "../mlx-rs", features = ["metal", "accelerate"] }
mlx-sys = { path = "../mlx-rs/mlx-sys" }
mlx-rs-core = { path = "../mlx-rs-core" }
thiserror = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokenizers = "0.21"

[dev-dependencies]
mlx-lm-utils = { path = "../mlx-rs/mlx-lm-utils" }
anyhow = "1"

[[example]]
name = "generate_qwen3"
path = "examples/generate_qwen3.rs"

[[example]]
name = "chat_qwen3"
path = "examples/chat_qwen3.rs"
