[workspace]

[package]
name = "gpt-sovits-mlx"
version = "0.1.0"
edition = "2021"
autoexamples = false
authors = ["YueChen"]
description = "GPT-SoVITS voice cloning in pure Rust with MLX acceleration"
repository = "https://github.com/user/gpt-sovits-mlx"
keywords = ["tts", "voice-cloning", "mlx", "gpt-sovits"]
categories = ["multimedia::audio"]
license = "MIT"

[dependencies]
# MLX bindings (from parent workspace)
mlx-rs = { path = "../../mlx-rs" }
mlx-sys = { path = "../../mlx-sys" }
mlx-lm-utils = { path = "../../mlx-lm-utils" }

# Shared infrastructure
mlx-rs-core = { path = "../../mlx-rs-core" }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Error handling
anyhow = "1"
thiserror = "2"

# Tokenizers
tokenizers = { version = "0.22.0", features = ["http"] }

# Text processing
pinyin = "0.10"
regex = "1"
lingua = { version = "1.6", default-features = false, features = ["chinese", "english", "japanese", "korean"] }
num2en = "1.0.0"
hanconv = "0.5"  # Traditional to simplified Chinese conversion

# G2PW (ONNX)
ort = { version = "2.0.0-rc.11", default-features = false, features = ["std", "download-binaries", "tls-native", "coreml"] }

[features]
default = []
debug-attn = []
debug-logits = []

[[example]]
name = "voice_clone"
path = "examples/voice_clone.rs"

[[example]]
name = "trace_t2s_rust"
path = "examples/trace_t2s_rust.rs"

[[example]]
name = "trace_t2s_full"
path = "examples/trace_t2s_full.rs"
